--- a/templates/apple.html
+++ b/templates/apple.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Classification</title>
   <style>
+    *{
+      margin: 0;
+      padding: 0;
+    }
     body {
       font-family: Arial, sans-serif;
       text-align: center;
@@ -59,14 +63,24 @@
       cursor: pointer;
       border-radius: 4px;
     }
+    header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Plant Disease Detection</h1>
+</header>
+
   <div id="container">
     <h1>Apple</h1>
     <div id="image-container">
       <div id="bounding-box">
-        <img id="uploaded-image" src="" alt="Uploaded Image">
+        <img id="upload-image" src="" alt="Uploaded Image">
       </div>
     </div>
     <div id="prediction">
